@@ -1,5 +1,6 @@
 0.2.2:
  * Fixed a fatal bug with Python 2.6/PyGTK 2.14
+ * Simplified and improved Makefile
 
 0.2.1: 
  * Fixed a serious security bug in which /screenshot prompted no auth. Also
